--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Warning: This repository is inactive and no longer maintained.
+
 Build Instructions:
  1. Clone repository using "git clone https://github.com/testeaxeax/ld42.git"
  2. Set your working directory to the projects root by using "cd ./ld42"
